objects/LAT_MX_PCD_PostalCode__c.object
<CustomObject>
    <fields>
        <fullName>LAT_MX_AGEB__c</fullName>
        <label>AGEB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_County__c</fullName>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Neighbourhood__c</fullName>
        <label>Neighbourhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_NilsenArea__c</fullName>
        <label>Nilsen Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>MX_Codigos_Postales</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_City__c</columns>
        <columns>LAT_MX_Neighbourhood__c</columns>
        <columns>LAT_MX_County__c</columns>
        <columns>LAT_MX_State__c</columns>
        <columns>LAT_MX_AGEB__c</columns>
        <columns>LAT_MX_NilsenArea__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>MX Codigos Postales</label>
        <language>es_MX</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <recordTypes>
        <fullName>LAT_MX_PCD_Standard</fullName>
        <active>true</active>
        <description>Mexico standard record type</description>
        <label>MX Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>